compiler-core/src/parse/snapshots/gleam_core__parse__tests__unknown_attribute.snap
---
source: compiler-core/src/parse/tests.rs
expression: "@go_faster()\npub fn main() { 1 }"
---
----- SOURCE CODE
@go_faster()
pub fn main() { 1 }

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:1
  │
1 │ @go_faster()
  │ ^^^^^^^^^^ I don't recognise this attribute

Hint: Try `deprecated`, `external` or `internal` instead.
